[gd_scene load_steps=3 format=3 uid="uid://blfkb51fp8bbt"]

[ext_resource type="Theme" uid="uid://ir4rfq0nqkt0" path="res://Assets/UI/UITheme.tres" id="1_68u02"]
[ext_resource type="Script" path="res://Scenes/encyclopedia.gd" id="2_6bqda"]

[node name="Encyclopedia" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_68u02")
script = ExtResource("2_6bqda")

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.0
offset_top = -226.0
offset_right = 383.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -371.5
offset_top = -217.0
offset_right = -6.5
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/ScrollContainer"]
custom_minimum_size = Vector2(365, 434)
layout_mode = 2

[node name="Level1" type="VBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(365, 170)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Level1"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Peringkat 1[/center]"

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer/Level1"]
custom_minimum_size = Vector2(365, 50)
layout_mode = 2

[node name="lvl1_1" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level1/HBoxContainer" groups=["Level1"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Mangsa-pemangsa"

[node name="lvl1_2" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level1/HBoxContainer" groups=["Level1"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Persaingan"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer/Level1"]
custom_minimum_size = Vector2(365, 50)
layout_mode = 2

[node name="lvl1_3" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level1/HBoxContainer2" groups=["Level1"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Simbiosis"

[node name="lvl1_4" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level1/HBoxContainer2" groups=["Level1"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true

[node name="Level2" type="VBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(365, 170)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Level2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Peringkat 2[/center]"

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer/Level2"]
custom_minimum_size = Vector2(365, 50)
layout_mode = 2

[node name="lvl2_1" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level2/HBoxContainer" groups=["Level2"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Mangsa-pemangsa"

[node name="lvl2_2" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level2/HBoxContainer" groups=["Level2"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Persaingan"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer/Level2"]
custom_minimum_size = Vector2(365, 50)
layout_mode = 2

[node name="lvl2_3" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level2/HBoxContainer2" groups=["Level2"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Simbiosis"

[node name="lvl2_4" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level2/HBoxContainer2" groups=["Level2"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true

[node name="Level3" type="VBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(365, 170)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Level3"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Peringkat 3[/center]"

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer/Level3"]
custom_minimum_size = Vector2(365, 50)
layout_mode = 2

[node name="lvl3_1" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level3/HBoxContainer" groups=["Level3"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Mangsa-pemangsa"

[node name="lvl3_2" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level3/HBoxContainer" groups=["Level3"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Persaingan"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer/Level3"]
custom_minimum_size = Vector2(365, 50)
layout_mode = 2

[node name="lvl3_3" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level3/HBoxContainer2" groups=["Level3"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Simbiosis"

[node name="lvl3_4" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level3/HBoxContainer2" groups=["Level3"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true

[node name="Level4" type="VBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(365, 170)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Level4"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Peringkat 4[/center]"

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer/Level4"]
custom_minimum_size = Vector2(365, 50)
layout_mode = 2

[node name="lvl4_1" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level4/HBoxContainer" groups=["Level4"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Mangsa-pemangsa"

[node name="lvl4_2" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level4/HBoxContainer" groups=["Level4"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Persaingan"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer/Level4"]
custom_minimum_size = Vector2(365, 50)
layout_mode = 2

[node name="lvl4_3" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level4/HBoxContainer2" groups=["Level4"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Simbiosis"

[node name="lvl4_4" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level4/HBoxContainer2" groups=["Level4"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true

[node name="Level5" type="VBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(365, 170)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Level5"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Peringkat 5[/center]"

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer/Level5"]
custom_minimum_size = Vector2(365, 50)
layout_mode = 2

[node name="lvl5_1" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level5/HBoxContainer" groups=["Level5"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Mangsa-pemangsa"

[node name="lvl5_2" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level5/HBoxContainer" groups=["Level5"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Persaingan"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer/Level5"]
custom_minimum_size = Vector2(365, 50)
layout_mode = 2

[node name="lvl5_3" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level5/HBoxContainer2" groups=["Level5"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Simbiosis"

[node name="lvl5_4" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level5/HBoxContainer2" groups=["Level5"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true

[node name="Level6" type="VBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(365, 170)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Level6"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Peringkat 6[/center]"

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer/Level6"]
custom_minimum_size = Vector2(365, 50)
layout_mode = 2

[node name="lvl6_1" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level6/HBoxContainer" groups=["Level6"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Mangsa-pemangsa"

[node name="lvl6_2" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level6/HBoxContainer" groups=["Level6"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Persaingan"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer/Level6"]
custom_minimum_size = Vector2(365, 50)
layout_mode = 2

[node name="lvl6_3" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level6/HBoxContainer2" groups=["Level6"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Simbiosis"

[node name="lvl6_4" type="Button" parent="MainPanel/ScrollContainer/VBoxContainer/Level6/HBoxContainer2" groups=["Level6"]]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel"]
layout_mode = 0
offset_left = 411.0
offset_top = 20.0
offset_right = 761.0
offset_bottom = 455.0
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 30
text = "Kembali"

[connection signal="pressed" from="MainPanel/ScrollContainer/VBoxContainer/Level1/HBoxContainer/lvl1_1" to="." method="_on_lvl_1_1_pressed"]
[connection signal="pressed" from="MainPanel/ScrollContainer/VBoxContainer/Level1/HBoxContainer/lvl1_2" to="." method="_on_lvl_1_2_pressed"]
[connection signal="pressed" from="MainPanel/ScrollContainer/VBoxContainer/Level1/HBoxContainer2/lvl1_3" to="." method="_on_lvl_1_3_pressed"]
[connection signal="pressed" from="MainPanel/ScrollContainer/VBoxContainer/Level1/HBoxContainer2/lvl1_4" to="." method="_on_lvl_1_4_pressed"]
[connection signal="pressed" from="MainPanel/ScrollContainer/VBoxContainer/Level2/HBoxContainer/lvl2_1" to="." method="_on_lvl_2_1_pressed"]
[connection signal="pressed" from="MainPanel/ScrollContainer/VBoxContainer/Level2/HBoxContainer/lvl2_2" to="." method="_on_lvl_2_2_pressed"]
[connection signal="pressed" from="MainPanel/ScrollContainer/VBoxContainer/Level2/HBoxContainer2/lvl2_3" to="." method="_on_lvl_2_3_pressed"]
[connection signal="pressed" from="MainPanel/ScrollContainer/VBoxContainer/Level2/HBoxContainer2/lvl2_4" to="." method="_on_lvl_2_4_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
